--- a/app/src/main/res/layout/activity_map2.xml
+++ b/app/src/main/res/layout/activity_map2.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:background="#799E58">
 
+    // 캠퍼스맵 배경
     <ImageView
         android:id="@+id/imageViewCampus_2"
         android:layout_width="wrap_content"
@@ -16,14 +17,14 @@
 
     <ImageButton
         android:id="@+id/imageButton50_2"
-        android:layout_width="141dp"
-        android:layout_height="129dp"
+        android:layout_width="wrap_content"
+        android:layout_height="104dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="254dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginBottom="78dp"
         android:layout_weight="1"
         android:background="#00ffffff"
         android:scaleType="fitStart"
@@ -31,14 +32,14 @@
 
     <ImageButton
         android:id="@+id/imageButtonKidok_2"
-        android:layout_width="wrap_content"
-        android:layout_height="59dp"
+        android:layout_width="69dp"
+        android:layout_height="60dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="126dp"
-        android:layout_marginEnd="178dp"
-        android:layout_marginBottom="175dp"
+        android:layout_marginEnd="216dp"
+        android:layout_marginBottom="174dp"
         android:layout_weight="1"
         android:background="#00ffffff"
         android:scaleType="fitStart"
@@ -46,13 +47,13 @@
 
     <ImageButton
         android:id="@+id/imageButtonInsa_2"
-        android:layout_width="wrap_content"
-        android:layout_height="94dp"
+        android:layout_width="100dp"
+        android:layout_height="95dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="251dp"
-        android:layout_marginEnd="35dp"
+        android:layout_marginEnd="60dp"
         android:layout_marginBottom="204dp"
         android:layout_weight="1"
         android:background="#00ffffff"
@@ -62,7 +63,7 @@
     <ImageButton
         android:id="@+id/imageButtonLibrary_2"
         android:layout_width="wrap_content"
-        android:layout_height="51dp"
+        android:layout_height="52dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
@@ -77,15 +78,15 @@
 
     <ImageButton
         android:id="@+id/imageButtonNuri_2"
-        android:layout_width="wrap_content"
-        android:layout_height="56dp"
+        android:layout_width="77dp"
+        android:layout_height="58dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:layout_marginStart="254dp"
-        android:layout_marginEnd="63dp"
-        android:layout_marginBottom="344dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="343dp"
         android:layout_weight="1"
         android:background="#00ffffff"
         android:scaleType="fitStart"
@@ -94,13 +95,13 @@
     <ImageButton
         android:id="@+id/imageButtonJoye_2"
         android:layout_width="wrap_content"
-        android:layout_height="81dp"
+        android:layout_height="83dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:layout_marginStart="330dp"
-        android:layout_marginEnd="-59dp"
+        android:layout_marginEnd="17dp"
         android:layout_marginBottom="295dp"
         android:layout_weight="1"
         android:background="#00ffffff"
@@ -109,15 +110,15 @@
 
     <ImageButton
         android:id="@+id/imageButtonSci2_2"
-        android:layout_width="wrap_content"
-        android:layout_height="76dp"
+        android:layout_width="87dp"
+        android:layout_height="79dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:layout_marginStart="316dp"
-        android:layout_marginEnd="-45dp"
-        android:layout_marginBottom="376dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="374dp"
         android:layout_weight="1"
         android:background="#00ffffff"
         android:scaleType="fitStart"
@@ -125,8 +126,8 @@
 
     <ImageButton
         android:id="@+id/imageButtonSci1_2"
-        android:layout_width="165dp"
-        android:layout_height="98dp"
+        android:layout_width="117dp"
+        android:layout_height="100dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -134,8 +135,8 @@
         android:layout_centerInParent="true"
         android:layout_marginStart="259dp"
         android:layout_marginTop="62dp"
-        android:layout_marginEnd="-13dp"
-        android:layout_marginBottom="443dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="441dp"
         android:layout_weight="1"
         android:background="#00ffffff"
         android:scaleType="fitStart"
@@ -143,8 +144,8 @@
 
     <ImageButton
         android:id="@+id/imageButtonShalom_2"
-        android:layout_width="165dp"
-        android:layout_height="88dp"
+        android:layout_width="139dp"
+        android:layout_height="89dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -152,8 +153,8 @@
         android:layout_centerInParent="true"
         android:layout_marginStart="115dp"
         android:layout_marginTop="36dp"
-        android:layout_marginEnd="131dp"
-        android:layout_marginBottom="479dp"
+        android:layout_marginEnd="157dp"
+        android:layout_marginBottom="478dp"
         android:layout_weight="1"
         android:background="#00ffffff"
         android:scaleType="fitStart"
@@ -161,8 +162,8 @@
 
     <ImageButton
         android:id="@+id/imageButtonItn_2"
-        android:layout_width="87dp"
-        android:layout_height="53dp"
+        android:layout_width="wrap_content"
+        android:layout_height="46dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -171,7 +172,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="88dp"
         android:layout_marginEnd="283dp"
-        android:layout_marginBottom="462dp"
+        android:layout_marginBottom="469dp"
         android:layout_weight="1"
         android:background="#00ffffff"
         android:scaleType="fitStart"
@@ -179,7 +180,7 @@
 
     <ImageButton
         android:id="@+id/imageButtonTgd_2"
-        android:layout_width="192dp"
+        android:layout_width="123dp"
         android:layout_height="88dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -188,7 +189,7 @@
         android:layout_centerInParent="true"
         android:layout_marginStart="36dp"
         android:layout_marginTop="237dp"
-        android:layout_marginEnd="183dp"
+        android:layout_marginEnd="252dp"
         android:layout_marginBottom="278dp"
         android:layout_weight="1"
         android:background="#00ffffff"
