--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#799E58">
 
-    // 캠퍼스 맵 배경
+    // 교내상점 메뉴 캠퍼스 맵 배경
     <ImageView
         android:id="@+id/imageViewCampus"
         android:layout_width="wrap_content"
