MapActivity에 문의사항 연결

--- a/app/src/main/res/layout/activity_map_qna.xml
+++ b/app/src/main/res/layout/activity_map_qna.xml
@@ -8,7 +8,7 @@
     android:orientation="horizontal"
     app:layoutDescription="@xml/activity_bus_qna_scene"
     android:layout_gravity="center"
-    tools:context=".QnaActivity">
+    tools:context=".MapQnaActivity">
 
     <TextView
         android:id="@+id/btnemail"
