--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,4 +68,65 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/title_logo" />
 
+    <TextView
+        android:id="@+id/textView_cafeteria"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/cafe24surround"
+        android:text="학식메뉴"
+        android:textColor="@color/main_red"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/swu_schoolbus"
+        app:layout_constraintEnd_toStartOf="@+id/swu_store"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/swu_cafeteria"
+        app:layout_constraintVertical_bias="0.2" />
+
+    <TextView
+        android:id="@+id/textView_store"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/cafe24surround"
+        android:text="교내상점"
+        android:textColor="@color/main_red"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/swu_spaces"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/swu_cafeteria"
+        app:layout_constraintTop_toBottomOf="@+id/swu_store"
+        app:layout_constraintVertical_bias="0.2" />
+
+    <TextView
+        android:id="@+id/textView_bus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/cafe24surround"
+        android:text="셔틀버스"
+        android:textColor="@color/main_red"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/swu_spaces"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/swu_schoolbus"
+        app:layout_constraintVertical_bias="0.2" />
+
+    <TextView
+        android:id="@+id/textView_space"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/cafe24surround"
+        android:text="학교공간"
+        android:textColor="@color/main_red"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/swu_schoolbus"
+        app:layout_constraintTop_toBottomOf="@+id/swu_spaces"
+        app:layout_constraintVertical_bias="0.2"
+        tools:layout_constraintHorizontal_bias="0.5" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
