--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
         app:srcCompat="@drawable/logo_store" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/titleLogo"
         android:layout_width="wrap_content"
         android:layout_height="130dp"
         android:layout_marginTop="40dp"
