--- a/app/src/main/res/drawable/tv_solid_rect.xml
+++ b/app/src/main/res/drawable/tv_solid_rect.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="#FF541F" />
+            <solid android:color="@color/main_red" />
         </shape>
     </item>
 </selector>
