--- a/app/src/main/res/layout/activity_bus_qna.xml
+++ b/app/src/main/res/layout/activity_bus_qna.xml
@@ -5,82 +5,38 @@
     android:id="@+id/linearLayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     app:layoutDescription="@xml/activity_bus_qna_scene"
     android:layout_gravity="center"
     tools:context=".QnaActivity">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:orientation="vertical">
+    <TextView
+        android:id="@+id/btnemail"
+        android:layout_width="178dp"
+        android:layout_height="72dp"
+        android:fontFamily="@font/font_button"
+        android:text="이메일로 문의하기"
+        android:textSize="20dp"
+        android:textColor="@color/main_red"
+        android:gravity="center"
+        android:background="@drawable/tv_stroke_rect"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imageView_email"
-                android:layout_width="43dp"
-                android:layout_height="33dp"
-                android:src="@drawable/ic_baseline_email_24" />
-
-            <TextView
-                android:id="@+id/btnemail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="이메일로 문의하기"
-                android:textColor="#000000"
-                android:textSize="24sp" />
-
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="juwon_0715@naver.com"
-            android:layout_gravity="right">
-
-        </TextView>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imageView_call"
-                android:layout_width="43dp"
-                android:layout_height="33dp"
-                android:src="@drawable/ic_baseline_call_24" />
-
-            <TextView
-                android:id="@+id/btncall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="전화로 문의하기"
-                android:textColor="#000000"
-                android:textSize="24sp" />
-
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="010-1111-1111"
-            android:layout_gravity="right">
-        </TextView>
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/btncall"
+        android:layout_width="178dp"
+        android:layout_height="72dp"
+        android:layout_marginLeft="12dp"
+        android:fontFamily="@font/font_button"
+        android:text="전화로 문의하기"
+        android:textSize="20dp"
+        android:textColor="@android:color/white"
+        android:gravity="center"
+        android:background="@drawable/tv_solid_rect"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"/>
 
 </LinearLayout>
