--- a/app/src/main/res/layout/activity_dormitory_cafeteria.xml
+++ b/app/src/main/res/layout/activity_dormitory_cafeteria.xml
@@ -126,6 +126,7 @@
                 android:id="@+id/dormitoryImageView3"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
+                android:background="@drawable/bu"
                 android:transitionName="imgTrans" />
 
             <Button
