--- a/app/src/main/res/layout/activity_staff_cafeteria.xml
+++ b/app/src/main/res/layout/activity_staff_cafeteria.xml
@@ -16,6 +16,7 @@
         android:layout_weight="1"
         android:layout_marginBottom="30dp"
         android:text="교직원 식당"
+        android:textColor="@color/cardview_dark_background"
         android:fontFamily="@font/cafe24surround"
         android:textSize="24sp" />
 
@@ -27,6 +28,7 @@
         android:layout_marginBottom="30dp"
         android:layout_weight="1"
         android:text="운영시간 :"
+        android:textColor="@color/cardview_dark_background"
         android:fontFamily="@font/cafe24surround"
         android:textSize="14sp" />
 
@@ -43,6 +45,7 @@
             android:layout_gravity="left"
             android:layout_marginBottom="10dp"
             android:text="금주의 식단"
+            android:textColor="@color/cardview_dark_background"
             android:fontFamily="@font/cafe24surround"
             android:textSize="14sp" />
 
@@ -77,6 +80,7 @@
             android:layout_gravity="left"
             android:layout_marginBottom="10dp"
             android:text="오늘의 점심 사진"
+            android:textColor="@color/cardview_dark_background"
             android:fontFamily="@font/cafe24surround"
             android:textSize="14sp" />
 
