학식메뉴 수정

--- a/app/src/main/res/layout/activity_dormitory_cafeteria.xml
+++ b/app/src/main/res/layout/activity_dormitory_cafeteria.xml
@@ -17,21 +17,9 @@
         android:layout_marginBottom="30dp"
         android:text="기숙사 식당"
         android:textColor="@color/cardview_dark_background"
-        android:fontFamily="@font/cafe24surround"
+        android:fontFamily="@font/scdream7"
         android:textSize="24sp" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_marginBottom="30dp"
-        android:layout_weight="1"
-        android:text="운영시간 :"
-        android:textColor="@color/cardview_dark_background"
-        android:fontFamily="@font/cafe24surround"
-        android:textSize="14sp" />
-
+    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
