학식메뉴 수정

--- a/app/src/main/res/layout/activity_cafeteria.xml
+++ b/app/src/main/res/layout/activity_cafeteria.xml
@@ -19,7 +19,7 @@
             android:id="@+id/staff_cafeteria_btn"
             android:layout_width="140dp"
             android:layout_height="140dp"
-            android:fontFamily="@font/cafe24surround"
+            android:fontFamily="@font/font_button"
             android:background="@drawable/tv_stroke_rect"
             android:textSize="17sp"
             android:text="교직원" />
@@ -28,7 +28,7 @@
             android:layout_width="140dp"
             android:layout_height="140dp"
             android:layout_marginLeft="40dp"
-            android:fontFamily="@font/cafe24surround"
+            android:fontFamily="@font/font_text"
             android:layout_gravity="center"
             android:gravity="center"
             android:textColor="@color/cardview_dark_background"
@@ -47,8 +47,9 @@
             android:id="@+id/dormitory_cafeteria_btn"
             android:layout_width="140dp"
             android:layout_height="140dp"
-            android:fontFamily="@font/cafe24surround"
-            android:background="@drawable/tv_stroke_rect"
+            android:fontFamily="@font/font_button"
+            android:background="@drawable/tv_solid_rect"
+            android:textColor="@android:color/white"
             android:textSize="17sp"
             android:text="기숙사" />
 
@@ -56,7 +57,7 @@
             android:layout_width="140dp"
             android:layout_height="140dp"
             android:layout_marginLeft="40dp"
-            android:fontFamily="@font/cafe24surround"
+            android:fontFamily="@font/font_text"
             android:layout_gravity="center"
             android:gravity="center"
             android:textColor="@color/cardview_dark_background"
