--- a/app/src/main/res/layout/activity_cafeteria.xml
+++ b/app/src/main/res/layout/activity_cafeteria.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="80dp"
         android:orientation="horizontal">
 
         <Button
@@ -21,7 +21,8 @@
             android:layout_height="140dp"
             android:fontFamily="@font/font_button"
             android:background="@drawable/tv_stroke_rect"
-            android:textSize="17sp"
+            android:textSize="20sp"
+            android:textColor="@color/main_red"
             android:text="교직원" />
 
         <TextView
@@ -31,6 +32,7 @@
             android:fontFamily="@font/font_text"
             android:layout_gravity="center"
             android:gravity="center"
+            android:textSize="15sp"
             android:textColor="@color/cardview_dark_background"
             android:text="[점심]\n11:30 ~ 13:30">
 
@@ -50,7 +52,7 @@
             android:fontFamily="@font/font_button"
             android:background="@drawable/tv_solid_rect"
             android:textColor="@android:color/white"
-            android:textSize="17sp"
+            android:textSize="20sp"
             android:text="기숙사" />
 
         <TextView
@@ -60,6 +62,7 @@
             android:fontFamily="@font/font_text"
             android:layout_gravity="center"
             android:gravity="center"
+            android:textSize="15sp"
             android:textColor="@color/cardview_dark_background"
             android:text="[점심]\n11:30 ~ 13:30\n\n[저녁]\n17:00 ~ 18:30\n\n[Break time]\n14:00 ~ 17:00">
 
