--- a/app/src/main/res/layout/activity_dormitory_cafeteria.xml
+++ b/app/src/main/res/layout/activity_dormitory_cafeteria.xml
@@ -16,9 +16,9 @@
         android:layout_weight="1"
         android:layout_marginBottom="40dp"
         android:text="기숙사 식당"
-        android:textColor="@color/cardview_dark_background"
         android:fontFamily="@font/scdream7"
-        android:textSize="25sp" />
+        android:textColor="#792222"
+        android:textSize="28sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
