--- a/app/src/main/res/layout/activity_staff_cafeteria.xml
+++ b/app/src/main/res/layout/activity_staff_cafeteria.xml
@@ -14,11 +14,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="40dp"
         android:text="교직원 식당"
-        android:textColor="@color/cardview_dark_background"
-        android:fontFamily="@font/scdream7"
-        android:textSize="25sp" />
+        android:textColor="#792222"
+        android:textSize="28sp"
+        android:fontFamily="@font/scdream7" />
 
     <LinearLayout
         android:layout_width="match_parent"
