--- a/app/src/main/res/layout/activity_staff_cafeteria.xml
+++ b/app/src/main/res/layout/activity_staff_cafeteria.xml
@@ -13,8 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_weight="1"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="30dp"
         android:text="교직원 식당"
         android:textColor="#792222"
         android:textSize="28sp"
@@ -25,6 +24,28 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginBottom="20dp"
+            android:text="운영시간 : "
+            android:textColor="@color/cardview_dark_background"
+            android:fontFamily="@font/cafe24surround"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginBottom="40dp"
+            android:text="[점심] 11:30 ~ 13:30"
+            android:textColor="@color/cardview_dark_background"
+            android:fontFamily="@font/cafe24surround"
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/textView3"
@@ -40,54 +61,19 @@
         <ImageView
             android:id="@+id/staffImageView1"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="290dp"
+            android:layout_marginBottom="2dp"
             android:transitionName="imgTrans" />
 
         <Button
             android:id="@+id/button1"
-            android:layout_width="60dp"
+            android:layout_width="80dp"
             android:layout_height="30dp"
             android:layout_gravity="right"
             android:onClick="bt1"
             android:text="업로드"
             android:fontFamily="@font/cafe24surround"
-            android:textSize="8sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_marginBottom="10dp"
-            android:text="오늘의 점심 사진"
-            android:textColor="@color/cardview_dark_background"
-            android:fontFamily="@font/cafe24surround"
-            android:textSize="16sp" />
-
-        <ImageView
-            android:id="@+id/staffImageView2"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:transitionName="imgTrans" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="60dp"
-            android:layout_height="30dp"
-            android:layout_gravity="right"
-            android:onClick="bt2"
-            android:text="업로드"
-            android:fontFamily="@font/cafe24surround"
-            android:textSize="8sp" />
-
+            android:textSize="10sp" />
 
     </LinearLayout>
 
